# user/serializers.py
@@ -1,6 +1,12 @@
-from django.contrib.auth import authenticate
 from django.contrib.auth import get_user_model
+from django.contrib.auth.forms import SetPasswordForm
+from django.utils.translation import gettext_lazy as _
+from django.conf import settings
+from django.forms import ValidationError
 from rest_framework import serializers
+from dj_rest_auth.registration.serializers import RegisterSerializer
+from dj_rest_auth.serializers import PasswordChangeSerializer, PasswordResetSerializer
+from user.forms import AppHubPasswordResetForm
 
 UserModel = get_user_model()
 
@@ -8,63 +14,114 @@ class UserSerializer(serializers.ModelSerializer):
     avatar = serializers.SerializerMethodField()
 
     def get_avatar(self, obj):
-        return obj.avatar.url
+        try:
+            return obj.avatar.url
+        except:
+            return ''
 
     class Meta:
         model = UserModel
-        fields = ['username', 'email', 'first_name', 'last_name', 'avatar', 'email_verified']
+        fields = ['username', 'email', 'first_name', 'last_name', 'avatar']
 
 
-class UserRegisterSerializer(serializers.ModelSerializer):
-    class Meta:
-        model = UserModel
-        fields = ['username', 'email', 'password', 'first_name', 'last_name']
-        extra_kwargs = {'password': {'write_only': True}}
+class UserRegisterSerializer(RegisterSerializer):
+    first_name = serializers.CharField(max_length=150, required=False)
+    last_name = serializers.CharField(max_length=150, required=False)
+
+
+    def validate_email(self, email):
+        ret = super().validate_email(email)
+        if settings.ACCOUNT_EMAIL_DOMAIN:
+            if not ret.endswith('@' + settings.ACCOUNT_EMAIL_DOMAIN):
+                raise serializers.ValidationError(
+                    _('E-mail address should end with') + ' @' + settings.ACCOUNT_EMAIL_DOMAIN,
+                )
+        return ret
+
+    def get_cleaned_data(self):
+        data = super().get_cleaned_data()
+        first_name = self.validated_data.get('first_name', '')
+        last_name = self.validated_data.get('last_name', '')
+
+        if first_name:
+            data['first_name'] = first_name
+        if last_name:
+            data['last_name'] = last_name
+        return data
 
 class UserUpdateSerializer(serializers.ModelSerializer):
     class Meta:
         model = UserModel
-        fields = ['username', 'email', 'first_name', 'last_name']
+        fields = ['username', 'first_name', 'last_name']
 
 class UserAvatarSerializer(serializers.ModelSerializer):
     class Meta:
         model = UserModel
         fields = ['avatar']
 
-class UserLoginSerializer(serializers.Serializer):
-    account = serializers.CharField()
-    password = serializers.CharField()
+class UserPasswordChangeSerializer(PasswordChangeSerializer):
 
-    class Meta:
-        fields = ['account', 'password']
-        extra_kwargs = {'password': {'write_only': True}}
+    def save(self):
+        ret = super().save()
+        if self.logout_on_password_change:
+            try:
+                self.user.auth_token.delete()
+            except:
+                pass
+        return ret
+
+class UserPasswordResetSerializer(PasswordResetSerializer):
+
+    @property
+    def password_reset_form_class(self):
+        if 'allauth' in settings.INSTALLED_APPS:
+            return AppHubPasswordResetForm
+        return super().password_reset_form_class
+
+class UserPasswordResetConfirmSerializer(serializers.Serializer):
+    """
+    Serializer for confirming a password reset attempt.
+    """
+    new_password1 = serializers.CharField(max_length=128)
+    new_password2 = serializers.CharField(max_length=128)
+    username = serializers.CharField()
+    token = serializers.CharField()
+
+    set_password_form_class = SetPasswordForm
+
+    _errors = {}
+    user = None
+    set_password_form = None
+
+    def custom_validation(self, attrs):
+        pass
 
     def validate(self, attrs):
-        account = attrs.get('account', '')
-        if account.find('@') != -1:
-            username = ''
-            email = account
+        if 'allauth' in settings.INSTALLED_APPS:
+            from allauth.account.forms import default_token_generator
+            from allauth.account.utils import url_str_to_user_pk as uid_decoder
         else:
-            username = account
-            email = ''
-        password = attrs.get('password')
-        user = authenticate(username=username, password=password, email=email)
-        if user is None:
-            raise serializers.ValidationError({'message': 'A user with this username/email and password is not found.'})
-        return {
-            'user': user
-        }
+            from django.contrib.auth.tokens import default_token_generator
+            from django.utils.http import urlsafe_base64_decode as uid_decoder
 
-class VerifyEmailSerializer(serializers.Serializer):
-    code = serializers.UUIDField()
+        # Decode the uidb64 (allauth use base36) to uid to get User object
+        try:
+            self.user = UserModel._default_manager.get(username=attrs['username'])
+        except (TypeError, ValueError, OverflowError, UserModel.DoesNotExist):
+            raise ValidationError({'username': ['Invalid value']})
 
-class RequestResetPasswordSerializer(serializers.Serializer):
-    email = serializers.EmailField()
+        if not default_token_generator.check_token(self.user, attrs['token']):
+            raise ValidationError({'token': ['Invalid value']})
 
-class ResetPasswordSerializer(serializers.Serializer):
-    code = serializers.UUIDField()
-    password = serializers.CharField()
+        self.custom_validation(attrs)
+        # Construct SetPasswordForm instance
+        self.set_password_form = self.set_password_form_class(
+            user=self.user, data=attrs,
+        )
+        if not self.set_password_form.is_valid():
+            raise serializers.ValidationError(self.set_password_form.errors)
 
-class ChangePasswordSerializer(serializers.Serializer):
-    password = serializers.CharField()
-    new_password = serializers.CharField()
+        return attrs
+
+    def save(self):
+        return self.set_password_form.save()
